# Wavetable-Synthesizer

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/karis/wavetablesynthesizer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/audio/: AudioPlayer.h  AudioSource.h  OboeAudioPlayer.h
app/src/main/cpp/include/utilities/: Log.h
app/src/main/cpp/include/wavetable/: WatableFactory.h  WatableOscillator.h  Wavetable.h  WavetableSynthesizer.h
app/src/main/cpp/src/audio/: OboeAudioPlayer.cpp
app/src/main/cpp/src/native/: WavetableSynthesizerNativeLib.cpp
app/src/main/cpp/src/wavetable/: WatableOscillator.cpp  WavetableFactory.cpp  WavetableSynthesizer.cpp
app/src/main/java/com/karis/wavetablesynthesizer/: WavetableSynthesizerApplication.kt
app/src/main/java/com/karis/wavetablesynthesizer/data/: NativeWavetableSynthesizer.kt
app/src/main/java/com/karis/wavetablesynthesizer/di/: AppModule.kt
app/src/main/java/com/karis/wavetablesynthesizer/domain/: WaveTable.kt  WavetableSynthesizer.kt
app/src/main/java/com/karis/wavetablesynthesizer/presentation/: MainActivity.kt
app/src/main/java/com/karis/wavetablesynthesizer/presentation/components/: WaveTableSynthesizerApp.kt  (+2 more)
app/src/main/res/values/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/karis/wavetablesynthesizer/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+3 files in other folders)
